# Provisions

./: .clang-tidy  CMakeLists.txt
.github/wolkflows/: cmake-multi-platform.yaml
.github/workflows/: cmake-multi-platform.yml
ProvisionsCore/: CMakeLists.txt  ExpirationDateHelper.cpp  ExpirationDateHelper.h  Provision.cpp  Provision.h  Provisions.cpp  Provisions.h
ProvisionsCore/Itf/: ProvisionGetterItf.h  ProvisionItf.h  ProvisionSetterItf.h  ProvisionsGetterItf.h  ProvisionsSetterItf.h
ProvisionsCore/Tests/: CMakeLists.txt  ProvisionTest.cpp  ProvisionsTest.cpp
cmd/: CMakeLists.txt
